// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component renders a select with 3 options 1`] = `
.sx1ewm2 {
  appearance: none;
  background-color: white;
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%231066b2%22%20d%3D%22M287%2069a18%2018%200%2000-13-5H18c-5%200-9%202-12%205a18%2018%200%2000-6%2013c0%205%202%2010%205%2013l128%20128c4%204%208%205%2013%205s9-1%2013-5L287%2095c4-3%205-8%205-13s-2-9-5-13z%22%2F%3E%3C%2Fsvg%3E);
  background-position: right 16px top 50%, 0 0;
  background-repeat: no-repeat, repeat;
  background-size: 0.65em auto, 100%;
  border-radius: var(--radii-0);
  border: 1px solid var(--colors-tonal500);
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 400;
  height: var(--sizes-2);
  letter-spacing: 0.01em;
  line-height: 1.4;
  padding-left: var(--space-3);
  padding-right: var(--space-3);
}

.sx1ewm2 {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sx1ewm2 {
  transition: all 75ms ease-out;
  width: 100%;
}

.sx1ewm2:hover {
  cursor: pointer;
}

.sx1ewm2:focus {
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  border-color: var(--colors-primary900);
  outline: none;
}

.sx1ewm2::-ms-expand {
  display: none;
}

.sx1ewm2[disabled],
.sx1ewm2 > option[disabled] {
  opacity: 0.7;
  background-color: var(--colors-tonal300);
  cursor: not-allowed;
}

<div>
  <select
    aria-label="dropdown"
    class="sx1ewm2"
  >
    <option
      value="value1"
    >
      Option 1
    </option>
    <option
      value="value2"
    >
      Option 2
    </option>
    <option
      value="value3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Select component renders an disabled select 1`] = `
.sx1ewm2 {
  appearance: none;
  background-color: white;
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%231066b2%22%20d%3D%22M287%2069a18%2018%200%2000-13-5H18c-5%200-9%202-12%205a18%2018%200%2000-6%2013c0%205%202%2010%205%2013l128%20128c4%204%208%205%2013%205s9-1%2013-5L287%2095c4-3%205-8%205-13s-2-9-5-13z%22%2F%3E%3C%2Fsvg%3E);
  background-position: right 16px top 50%, 0 0;
  background-repeat: no-repeat, repeat;
  background-size: 0.65em auto, 100%;
  border-radius: var(--radii-0);
  border: 1px solid var(--colors-tonal500);
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 400;
  height: var(--sizes-2);
  letter-spacing: 0.01em;
  line-height: 1.4;
  padding-left: var(--space-3);
  padding-right: var(--space-3);
}

.sx1ewm2 {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sx1ewm2 {
  transition: all 75ms ease-out;
  width: 100%;
}

.sx1ewm2:hover {
  cursor: pointer;
}

.sx1ewm2:focus {
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  border-color: var(--colors-primary900);
  outline: none;
}

.sx1ewm2::-ms-expand {
  display: none;
}

.sx1ewm2[disabled],
.sx1ewm2 > option[disabled] {
  opacity: 0.7;
  background-color: var(--colors-tonal300);
  cursor: not-allowed;
}

<div>
  <select
    aria-label="dropdown"
    class="sx1ewm2"
    disabled=""
  />
</div>
`;

exports[`Select component renders select with a default option 1`] = `
.sx1ewm2 {
  appearance: none;
  background-color: white;
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%231066b2%22%20d%3D%22M287%2069a18%2018%200%2000-13-5H18c-5%200-9%202-12%205a18%2018%200%2000-6%2013c0%205%202%2010%205%2013l128%20128c4%204%208%205%2013%205s9-1%2013-5L287%2095c4-3%205-8%205-13s-2-9-5-13z%22%2F%3E%3C%2Fsvg%3E);
  background-position: right 16px top 50%, 0 0;
  background-repeat: no-repeat, repeat;
  background-size: 0.65em auto, 100%;
  border-radius: var(--radii-0);
  border: 1px solid var(--colors-tonal500);
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 400;
  height: var(--sizes-2);
  letter-spacing: 0.01em;
  line-height: 1.4;
  padding-left: var(--space-3);
  padding-right: var(--space-3);
}

.sx1ewm2 {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sx1ewm2 {
  transition: all 75ms ease-out;
  width: 100%;
}

.sx1ewm2:hover {
  cursor: pointer;
}

.sx1ewm2:focus {
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  border-color: var(--colors-primary900);
  outline: none;
}

.sx1ewm2::-ms-expand {
  display: none;
}

.sx1ewm2[disabled],
.sx1ewm2 > option[disabled] {
  opacity: 0.7;
  background-color: var(--colors-tonal300);
  cursor: not-allowed;
}

<div>
  <select
    aria-label="dropdown"
    class="sx1ewm2"
  >
    <option>
       Please select:
    </option>
    <option
      value="value1"
    >
      Option 1
    </option>
    <option
      value="value2"
    >
      Option 2
    </option>
    <option
      value="value3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Select component renders select with a disabled option 1`] = `
.sx1ewm2 {
  appearance: none;
  background-color: white;
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%231066b2%22%20d%3D%22M287%2069a18%2018%200%2000-13-5H18c-5%200-9%202-12%205a18%2018%200%2000-6%2013c0%205%202%2010%205%2013l128%20128c4%204%208%205%2013%205s9-1%2013-5L287%2095c4-3%205-8%205-13s-2-9-5-13z%22%2F%3E%3C%2Fsvg%3E);
  background-position: right 16px top 50%, 0 0;
  background-repeat: no-repeat, repeat;
  background-size: 0.65em auto, 100%;
  border-radius: var(--radii-0);
  border: 1px solid var(--colors-tonal500);
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 400;
  height: var(--sizes-2);
  letter-spacing: 0.01em;
  line-height: 1.4;
  padding-left: var(--space-3);
  padding-right: var(--space-3);
}

.sx1ewm2 {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sx1ewm2 {
  transition: all 75ms ease-out;
  width: 100%;
}

.sx1ewm2:hover {
  cursor: pointer;
}

.sx1ewm2:focus {
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  border-color: var(--colors-primary900);
  outline: none;
}

.sx1ewm2::-ms-expand {
  display: none;
}

.sx1ewm2[disabled],
.sx1ewm2 > option[disabled] {
  opacity: 0.7;
  background-color: var(--colors-tonal300);
  cursor: not-allowed;
}

<div>
  <select
    aria-label="dropdown"
    class="sx1ewm2"
  >
    <option
      value="value1"
    >
      Option 1
    </option>
    <option
      value="value2"
    >
      Option 2
    </option>
    <option
      value="value3"
    >
      Option 3
    </option>
    <option
      disabled=""
      value="value4"
    >
      Option 4
    </option>
  </select>
</div>
`;

exports[`Select component renders select with no options 1`] = `
.sx1ewm2 {
  appearance: none;
  background-color: white;
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%231066b2%22%20d%3D%22M287%2069a18%2018%200%2000-13-5H18c-5%200-9%202-12%205a18%2018%200%2000-6%2013c0%205%202%2010%205%2013l128%20128c4%204%208%205%2013%205s9-1%2013-5L287%2095c4-3%205-8%205-13s-2-9-5-13z%22%2F%3E%3C%2Fsvg%3E);
  background-position: right 16px top 50%, 0 0;
  background-repeat: no-repeat, repeat;
  background-size: 0.65em auto, 100%;
  border-radius: var(--radii-0);
  border: 1px solid var(--colors-tonal500);
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 400;
  height: var(--sizes-2);
  letter-spacing: 0.01em;
  line-height: 1.4;
  padding-left: var(--space-3);
  padding-right: var(--space-3);
}

.sx1ewm2 {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sx1ewm2 {
  transition: all 75ms ease-out;
  width: 100%;
}

.sx1ewm2:hover {
  cursor: pointer;
}

.sx1ewm2:focus {
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  border-color: var(--colors-primary900);
  outline: none;
}

.sx1ewm2::-ms-expand {
  display: none;
}

.sx1ewm2[disabled],
.sx1ewm2 > option[disabled] {
  opacity: 0.7;
  background-color: var(--colors-tonal300);
  cursor: not-allowed;
}

<div>
  <select
    aria-label="dropdown"
    class="sx1ewm2"
  />
</div>
`;
